--- a/Mapper/Mapper/Mapper.vcxproj.filters
+++ b/Mapper/Mapper/Mapper.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="FileManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vMapper.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -44,5 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="vMapper.dl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
